<resources>
    <string name="app_name">便易通</string>
    <string name="index">首页</string>
    <string name="neighbour">近邻</string>
    <string name="open_the_door">开门</string>
    <string name="fresh_supermarket">生鲜</string>
    <string name="community_announcement">社区公告</string>
    <string name="convenience_phone">便民黄页</string>
    <string name="suggest">投诉建议</string>
    <string name="tenement_steward">物业管家</string>
    <string name="my">我的</string>
    <string name="everyday_recommend">每日推荐</string>
    <string name="edit">编辑</string>
    <string name="announcement">公告</string>
    <string name="all">全部</string>
    <string name="convenience_phone1">便民黄页</string>
    <string name="police_service">警务</string>
    <string name="administrative">行政单位</string>
    <string name="steward">小区物管</string>
    <string name="suggest_type">投诉类型</string>
    <string name="suggest_image">投诉图片</string>
    <string name="suggest_detail">投诉详情</string>
    <string name="input_suggest_detail">请输入投诉详情</string>
    <string name="voice">语音</string>
    <string name="press_talk">按住说话</string>
    <string name="commit">提交</string>
    <string name="call_phone">一键呼叫</string>
    <string name="like">点赞</string>
    <string name="add_comment">添加你的评论</string>
    <string name="add_comment1">添加评论..</string>
    <string name="choiceness">精选</string>
    <string name="fruit">水果</string>
    <string name="greenstuff">蔬菜</string>
    <string name="aquatic_product">水产</string>
    <string name="meat">肉类</string>
    <string name="search">搜索</string>
    <string name="personal_information">个人信息</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="identity">身份</string>
    <string name="city">城市</string>
    <string name="village">小区</string>
    <string name="floor">楼栋</string>
    <string name="room_number">房号</string>
    <string name="house_information">房屋信息</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="input_obligate_phone">请输入预留的手机号</string>
    <string name="input">请输入</string>
    <string name="input_feedback">请在这里填写你对我们的意见，我们将不断改进，感谢支持</string>
    <string name="feedback">意见反馈</string>
    <string name="send">发送</string>
    <string name="message_remind_setting">消息提醒通知</string>
    <string name="verstion_information">版本信息</string>
    <string name="clear_cache">清理缓存</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="input_describe">一句话描述</string>
    <string name="input_on_commisson_name">请输入被授权人姓名</string>
    <string name="add_cn">+86</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="on_commisson_identity">被授权人身份</string>
    <string name="please_later">请稍后\u2026</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_release_label">松开立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="no_more_data">已经没有更多数据了</string>
    <string name="goods_loading_in">加载中\u2026</string>
    <string name="installation_failed">安装未完成</string>
    <string name="download_complete">下载完成，正在安装\u2026</string>
    <string name="download_failed">下载失败</string>
    <string name="version_update">有新版本更新啦！</string>
    <string name="go_upgrade">立即升级</string>
    <string name="download_update">正在下载更新</string>
    <string name="now_no_network">当前网络不可用</string>
    <string name="the_district_is_still_under_review">该小区还在审核中</string>
    <string name="please_login_first">请先登录</string>
    <string name="load">加载</string>
    <string name="failed_to_connect_to_server">未能连接到服务器</string>
    <string name="not_logged_in">未登录</string>
    <string name="no_district">暂无小区</string>
    <string name="click_to_Login">点击登录</string>
    <string name="click_add_community">点击添加小区</string>
    <string name="more">更多</string>
    <string name="put_away">收起</string>
    <string name="add_community">添加小区</string>
    <string name="search_can_not_be_empty">搜索不能为空</string>
    <string name="please_turn_on_gps">请开启GPS</string>
    <string name="check_whether_the_network_or_gps_is_open">请检查网络或GPS是否打开</string>
    <string name="add_authorization">添加授权</string>
    <string name="carry_out">完成</string>
    <string name="modify_authorization">修改授权</string>
    <string name="please_select_the_start_time_first">请先选择开始时间</string>
    <string name="please_select_the_end_time">请选择结束时间</string>
    <string name="do_not_leave_your_name_blank">姓名不能为空</string>
    <string name="the_phone_number_can_not_be_empty">手机号不能为空</string>
    <string name="added_successfully">添加成功</string>
    <string name="successfully_modified">修改成功</string>
    <string name="this_user_already_has_this_permission">该用户已有此权限</string>
    <string name="fail_to_edit">修改失败</string>
    <string name="add_failed">添加失败</string>
    <string name="neighborhood_comments">近邻评论</string>
    <string name="release">发布</string>
    <string name="cancel">取消</string>
    <string name="comments_can_not_be_empty">评论不能为空</string>
    <string name="comments_are_successful">评论成功</string>
    <string name="comment_failed">评论失败</string>
    <string name="property_steward">物业管家</string>
    <string name="certification">认证</string>
    <string name="all_read">全部已读</string>
    <string name="choose_district_and_county">选择区县</string>
    <string name="certified_area">认证小区</string>
    <string name="audited">已审核</string>
    <string name="pending_review">待审核</string>
    <string name="audit_failure">审核失败</string>
    <string name="get_community_failure">获取社区失败</string>
    <string name="obtain">获取</string>
    <string name="dynamic_text">动态正文</string>
    <string name="has_been_praised">已点赞</string>
    <string name="cancel_the_point_of_praise">取消点赞</string>
    <string name="comment">评论</string>
    <string name="praise">赞</string>
    <string name="has_been_reported">已举报</string>
    <string name="news_comment">新闻评论</string>
    <string name="reply_to_comment">回复评论</string>
    <string name="please_select_the_cell_first">请先选择小区</string>
    <string name="please_choose_floor_first">请先选择楼栋</string>
    <string name="please_select_the_unit_first">请先选择单元</string>
    <string name="please_select_the_room_first">请先选择房间</string>
    <string name="the_district_can_not_find_floor">该小区找不到楼栋</string>
    <string name="the_floor_can_not_find_the_unit">该楼栋找不到单元</string>
    <string name="the_unit_can_not_find_the_room_number">该单元找不到房号</string>
    <string name="submitted_successfully">提交成功</string>
    <string name="The_district_room_number_of_the_certification_application_has_been_submitted">该小区房号的认证申请已经提交过了</string>
    <string name="delete">删除</string>
    <string name="prompt">提示</string>
    <string name="whether_to_delete_the_donor">是否删除授权人</string>
    <string name="authorized_management">授权管理</string>
    <string name="successfully_deleted">删除成功</string>
    <string name="failed_to_delete">删除失败</string>
    <string name="notice_details">公告详情</string>
    <string name="contacts">通讯录</string>
    <string name="news_details">新闻详情</string>
    <string name="feedback_failed">反馈失败</string>
    <string name="feedback_is_successful">反馈成功</string>
    <string name="opinion_can_not_be_empty">意见不能为空</string>
    <string name="product_details">商品详情</string>
    <string name="user_agreement">用户协议</string>
    <string name="about_us">关于我们</string>
    <string name="now_the_first">现在的第</string>
    <string name="the_article_is_deleted">条被删除</string>
    <string name="select_city">选择城市</string>
    <string name="select_the_cell">选择小区</string>
    <string name="choose_floor">选择楼栋</string>
    <string name="select_room_number">选择房号</string>
    <string name="select_the_unit">选择单元</string>
    <string name="select_the_province">选择省份</string>
    <string name="please_enter_a_valid_phone_number">请输入正确的手机号</string>
    <string name="verification_code_must_be_filled">验证码不能为空</string>
    <string name="please_check_the_agreed_user_agreement">请勾选同意用户协议</string>
    <string name="failed_to_generate_verification_code">生成验证码失败</string>
    <string name="login_failed">登录失败</string>
    <string name="message_center">消息中心</string>
    <string name="message_details">消息详情</string>
    <string name="my_release">我的发布</string>
    <string name="whether_to_delete_the_release">是否删除发布</string>
    <string name="personal_data">个人资料</string>
    <string name="publish_dynamic">发布动态</string>
    <string name="publish_content_can_not_be_empty">发布内容不能为空</string>
    <string name="upload">上传</string>
    <string name="image_upload_failed">图片上传失败</string>
    <string name="published_successfully">发布成功</string>
    <string name="release_failed">发布失败</string>
    <string name="current_version">当前版本</string>
    <string name="cleaning_up">正在清理</string>
    <string name="clean_up">清理完成</string>
    <string name="turned_on">已开启</string>
    <string name="closed">已关闭</string>
    <string name="whether_to_clean_up_the_cache">是否清理缓存</string>
    <string name="cleaning">清理</string>
    <string name="no_cache_can_be_cleaned_up">没有缓存可清理</string>
    <string name="whether_to_log_out">是否退出登录</string>
    <string name="drop_out">退出</string>
    <string name="save_failed">保存失败</string>
    <string name="modify_avatar">修改头像</string>
    <string name="this_image_is_invalid">此图片无效</string>
    <string name="authentication_can_not_be_empty">认证不能为空</string>
    <string name="no_image">没有图片</string>
    <string name="the_picture_can_not_be_empty">头像不能为空</string>
    <string name="save">保存</string>
    <string name="please_select_the_type_of_complaint">请选择投诉类型</string>
    <string name="complaints_can_not_be_empty">投诉内容不能为空</string>
    <string name="uploaded_successfully">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="types_of_complaint_suggestions">投诉建议类型</string>
    <string name="switch_the_cell">切换小区</string>
    <string name="personal_description">个人描述</string>
    <string name="determine">确定</string>
    <string name="description_can_not_be_empty">描述不能为空</string>
    <string name="change_username">修改昵称</string>
    <string name="name_is_required">名称不能为空</string>
    <string name="family">家人</string>
    <string name="tenant">租客</string>
    <string name="temporary_guest">临时客人</string>
    <string name="unlimited">无限制</string>
    <string name="key_management">钥匙管理</string>
    <string name="featured">精选</string>
    <string name="you_have_no_district_please_first_certification_district">您还没有小区,请先认证小区</string>
    <string name="login">登录</string>
    <string name="unlocked">开锁中</string>
    <string name="unlock_success">开锁成功</string>
    <string name="report">举报</string>
    <string name="wechat_friends_circle">微信朋友圈</string>
    <string name="wechat_friends">微信好友</string>
    <string name="be_granted_time_limit">被授人时限</string>
    <string name="limit">限制</string>
    <string name="starting_time">开始时间</string>
    <string name="end_Time">结束时间</string>
    <string name="no_licensees">暂无授权人</string>
    <string name="djtjxdsq_jkmdxqsygt">点击添加新的授权,将开门的权限授予给他</string>
    <string name="add_a_new_license">添加新的授权</string>
    <string name="authorized_list">被授权人列表</string>
    <string name="there_is_no_news_yet">暂时没有消息</string>
    <string name="comments_zero">评论 0</string>
    <string name="praise_zero">赞 0</string>
    <string name="share_it">分享</string>
    <string name="make_life_easier">让生活更简单</string>
    <string name="input_phone_no">请输入手机号</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="login_on_behalf_of_your_consent">登录代表您同意</string>
    <string name="take_pictures">拍照</string>
    <string name="choose_from_the_phone_album">从手机相册选择</string>
</resources>