<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo_5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/make_life_easier"
        android:textAppearance="@style/TextTypeFace_rshgjd"
        android:textColor="@color/text_color_somber"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawableLeft="@drawable/log_phone_login"
            android:drawablePadding="15dp"
            android:hint="@string/input_phone_no"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/line_login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_GetCode"
                android:layout_width="60dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_bg_yellow"
                android:gravity="center"
                android:text="@string/obtain"
                android:textColor="@color/text_color_somber"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/login_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/text_GetCode"
                android:background="@null"
                android:drawableLeft="@drawable/log_code_login"
                android:drawablePadding="15dp"
                android:hint="@string/please_enter_verification_code"
                android:inputType="number"
                android:textSize="16sp" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/line_login" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/login_bg_yellow"
        android:text="@string/login"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/ck_login_contract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="6dp"
            android:background="@drawable/checkbox_style_all"
            android:button="@null"
            android:checked="true" />
        <!--android:drawableLeft="@drawable/log_yes_login"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:text="@string/login_on_behalf_of_your_consent"
            android:textColor="@color/small_text_color_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_contract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/color_blue_phone"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>