<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/base_text_title"></include>

    <include layout="@layout/base_view_line"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_suggest_type_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_gray_next"
                android:padding="15dp"
                android:text="@string/suggest_type"
                android:textColor="@color/text_color_somber"
                android:textSize="15sp" />

            <include layout="@layout/base_view_line_marginleft"></include>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:paddingTop="12dp"
                android:text="@string/suggest_image"
                android:textColor="@color/text_color_somber"
                android:textSize="15sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingLeft="15dp"
                android:paddingTop="12dp"
                android:text="@string/suggest_detail"
                android:textColor="@color/text_color_somber"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/hint_gray_bg">

                <EditText
                    android:id="@+id/et_content_suggest_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/input_suggest_detail"
                    android:textColor="@color/text_color_somber"
                    android:textColorHint="@color/hint_gray_color"
                    android:textSize="13sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_suggest_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/submit_bg_yellow"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:text="@string/commit"
                android:textColor="@color/tv_color_name"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>