<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/white_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/take_pictures"
                android:textColor="@color/color_blue_phone"
                android:textSize="15sp"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/linegray" />

            <TextView
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/choose_from_the_phone_album"
                android:textColor="@color/color_blue_phone"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:background="@drawable/white_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_blue_phone"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>